<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/bus_info"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    android:paddingBottom="7dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="7dp" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TransitAgency_Route"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/agency"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/bus_stop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/stop"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/bus_arrives_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="bus arrives in:"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/time"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="100sp" />

            <TextView
                android:id="@+id/TextView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="minutes"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </FrameLayout>
</FrameLayout>
